# Pracownia_Fizyczna_I_R

./: .gitignore  README.md  pyproject.toml
pelne/cialo_doskonale_czarne/: cialo_doskonale_czarne.tex
pelne/hall/: hall.tex
pelne/pryzmat/: pryzmat.tex
pelne/radon/: radon.tex
pelne/zarowka/: zarowka.tex
skrocone/kabel/: kabel.tex
skrocone/pierscienie_newtona/: pierscienie_newtona.tex
skrocone/przemiany_gazowe/: \  przemiany_gazowe.tex
skrocone/spektrometr/: spektrometr.tex
skrocone/wachadla/: wachadla.tex
week1/: pryzmat.aux  pryzmat.fdb_latexmk  pryzmat.fls  pryzmat.out
week1/analiza_danych/: analizy.py  pyrightconfig.json
week2/: zarowka.aux  zarowka.fdb_latexmk  zarowka.fls  zarowka.out  zarowka.tex
week2/analiza/: analiza.py
week2/latex_build/: zarowka.aux
week3/: hall.aux  hall.fdb_latexmk  hall.fls  hall.out  hall.tex
week3/analiza/: analiza.py
week4/: cialo_doskonale_czarne.aux  cialo_doskonale_czarne.fdb_latexmk  cialo_doskonale_czarne.fls  cialo_doskonale_czarne.out  cialo_doskonale_czarne.synctex(busy)  cialo_doskonale_czarne.tex  pdflatex32173.fls
week4/analiza/: analiza.py
week4/latex_build/: cialo_doskonale_czarne.aux  cialo_doskonale_czarne.fls
week5/: radon.aux  radon.fdb_latexmk  radon.fls  radon.out  radon.tex
week5/analiza/: analiza.py
week5/latex_build/: radon.aux  radon.fdb_latexmk  radon.fls  radon.out
week6/: pierscienie_newtona.tex
week6/analiza/: analiza.py
week7/: spektrometr.tex
week7/analiza/: Capstone Data.csv  analiza.py  detektor.csv
week8/analiza/: analiza.py
(+45 files in other folders)
